--- a/FlyCapture2-demo/example_ui/src/main/resources/flycapture/examples/cpp/snap/CameraConfigurationView.fxml
+++ b/FlyCapture2-demo/example_ui/src/main/resources/flycapture/examples/cpp/snap/CameraConfigurationView.fxml
@@ -60,6 +60,48 @@
                         <Insets left="14.0" />
                     </VBox.margin>
                 </GridPane>
+            <Separator prefWidth="200.0">
+               <VBox.margin>
+                  <Insets bottom="12.0" top="12.0" />
+               </VBox.margin>
+            </Separator>
+            <FlowPane prefWidth="200.0">
+               <children>
+                  <Label text="Display Test Pattern">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="6.0" />
+               </VBox.margin>
+            </FlowPane>
+            <VBox prefWidth="100.0">
+               <children>
+                  <RadioButton fx:id="displayTestPattern1RadioButton" mnemonicParsing="false" text="Pattern 1">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="displayTestPatternGroup" />
+                     </toggleGroup>
+                     <VBox.margin>
+                        <Insets bottom="3.0" top="3.0" />
+                     </VBox.margin>
+                  </RadioButton>
+                  <RadioButton fx:id="displayTestPattern2RadioButton" mnemonicParsing="false" text="Pattern 2" toggleGroup="$displayTestPatternGroup">
+                     <VBox.margin>
+                        <Insets bottom="3.0" top="3.0" />
+                     </VBox.margin>
+                  </RadioButton>
+                  <RadioButton fx:id="displayTestPatternNoneRadioButton" mnemonicParsing="false" text="None" toggleGroup="$displayTestPatternGroup">
+                     <VBox.margin>
+                        <Insets bottom="3.0" top="3.0" />
+                     </VBox.margin>
+                  </RadioButton>
+               </children>
+               <VBox.margin>
+                  <Insets left="14.0" />
+               </VBox.margin>
+            </VBox>
             </children>
         </VBox>
     </center>
